editing wbsite for the ocr

--- a/elements.html
+++ b/elements.html
@@ -44,7 +44,7 @@
 
 								<!-- Text stuff -->
 									<h2>MATD</h2>
-									<p>Our team is composed of <b>Andrea Matera</b>, who took care of the image pre-processing, <b>Daniel Miguel</b>, who took care of the segmentation, <b>Titouan Locatelli</b>, who took care of the neural network, and <b>Mathieu Neumar</b>, who took care of the sudoku resolution, the interface and the website.
+									<p>Our team is composed of <b>Mathieu Neumar</b>, who took care of the image pre-processing, <b>Mathis Kpenou</b>, who took care of the manual and the automatic rotation, <b>Jessy Courtemanche</b>, who took care of the segmentation, <b>Satya Shetty</b>, who took care of the neural network, and <b>Enzo Jehl</b>, who took care of the sudoku resolution and the interface.
 									</p>
 										
 				<!-- Footer -->
@@ -82,7 +82,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">matd@gmail.co</a></p>
+								<p><a href="#">ocr_epita@gmail.co</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
