--- a/generic.html
+++ b/generic.html
@@ -43,6 +43,9 @@
 									<p>You can download our OCR Sudoku solver and our specifications. </p>
 								</header>
 								<p><a href="https://mega.nz/folder/W1l11SDZ#B088Hm1qepSmwshvS4YI1Q">Notre OCR</a></p>
+								<p><a href="">Intermediate report</a></p>
+								<p><a href="">Final report</a></p>
+
 							</section>
 
 					</div>
@@ -82,7 +85,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">matd@gmail.com</a></p>
+								<p><a href="#">ocr_epita@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
