--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">matd@gmail.com</a></p>
+								<p><a href="#">ocr_epita@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
