--- a/generic.html
+++ b/generic.html
@@ -43,7 +43,7 @@
 									<p>You can download our OCR Sudoku solver and our specifications. </p>
 								</header>
 								<p><a href="https://mega.nz/folder/W1l11SDZ#B088Hm1qepSmwshvS4YI1Q">Notre OCR</a></p>
-								<p><a href="">Intermediate report</a></p>
+								<p><a href="pdf/rapport_1.pdf">Intermediate report</a></p>
 								<p><a href="">Final report</a></p>
 
 							</section>
