--- a/generic.html
+++ b/generic.html
@@ -44,7 +44,7 @@
 								</header>
 								<p><a href="https://mega.nz/folder/W1l11SDZ#B088Hm1qepSmwshvS4YI1Q">Notre OCR</a></p>
 								<p><a href="pdf/rapport_1.pdf">Intermediate report</a></p>
-								<p><a href="">Final report</a></p>
+								<p><a href="pdf/rapport_final.pdf">Final report</a></p>
 
 							</section>
 
