--- a/generic.html
+++ b/generic.html
@@ -42,7 +42,7 @@
 									Section</h1>
 									<p>You can download our OCR Sudoku solver and our specifications. </p>
 								</header>
-								<p><a href="https://mega.nz/folder/W1l11SDZ#B088Hm1qepSmwshvS4YI1Q">Notre OCR</a></p>
+								<p><a href="OCR.zip">Notre OCR</a></p>
 								<p><a href="pdf/rapport_1.pdf">Intermediate report</a></p>
 								<p><a href="pdf/rapport_final.pdf">Final report</a></p>
 
